[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface.gd" type="Script" id=1]
[ext_resource path="res://interface/MoneyAndFood.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/alarm clock.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[node name="Interface" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CashAndFood" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 1235, 35 )

[node name="BarUpper1" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 185, 35 )
_sections_unfolded = [ "Anchor", "Margin", "Offset", "Textures", "Theme", "Transform", "Visibility" ]

[node name="BarUpper2" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 535, 35 )
_sections_unfolded = [ "Anchor", "Margin", "Offset", "Textures", "Theme", "Transform", "Visibility" ]

[node name="BarUpper3" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 885, 35 )
_sections_unfolded = [ "Anchor", "Margin", "Textures", "Theme", "Transform", "Visibility" ]

[node name="BarLower1" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 185, 90 )

[node name="BarLower2" parent="." index="5" instance=ExtResource( 3 )]

position = Vector2( 535, 90 )

[node name="BarLower3" parent="." index="6" instance=ExtResource( 3 )]

position = Vector2( 885, 90 )
_sections_unfolded = [ "Anchor", "Margin", "Textures", "Theme", "Transform", "Visibility" ]

[node name="BarLower4" parent="." index="7" instance=ExtResource( 3 )]

position = Vector2( 1235, 90 )
_sections_unfolded = [ "Anchor", "Margin", "Textures", "Theme", "Visibility", "Z Index" ]

[node name="Clock" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = 723.0
margin_right = 1420.0
margin_bottom = 808.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.125, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0.00231934, 0.0742188, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "14:00h"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]


